# raya-plugins

./: .gitignore  README.md
node/: README.md
python/livekit-plugins-bakbak/: .env.example  README.md  pyproject.toml
python/livekit-plugins-bakbak/livekit/plugins/bakbak/: __init__.py  _client.py  _urls.py  log.py  stt.py  tts.py  version.py
python/livekit-plugins-bakbak/scripts/: smoke_tts.py
python/livekit-plugins-bakbak/tests/: test_audio_helpers.py  test_sse_consumer.py  test_stt.py  test_tts_features.py
